...
                  Card(
                    margin: const EdgeInsets.all(appPadding * 2),
                    child: Padding(
                      padding: const EdgeInsets.symmetric(
                          horizontal: appPadding * 2),
                      child: TextField(
                        key: const ValueKey('NameForm'),
                        minLines: 5,
                        maxLines: null,
                        controller: controller.nameControl,
                        decoration: InputDecoration(
                          border: InputBorder.none,
                          hintText: t.taskpage.name,
...
